<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feeder_load"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:orientation="vertical"
    android:background="@color/gray"
    >

    <LinearLayout
        android:id="@+id/editTextgroup_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_feeder_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bGray"
                android:textColor="@android:color/holo_orange_dark"
                android:gravity="center"
                android:text="@string/f1"
                android:textSize="26sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="4"
            android:background="#C1C3C5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_R"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/r"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/txt_S"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/s"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/txt_T"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/t"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/txt_N"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/n"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginVertical="3dp"
        android:layout_weight="1"
        android:background="@color/green_100" />

</LinearLayout>

