<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/reg_Line_Voltage_div"
    android:orientation="vertical"
    android:visibility="visible"
    android:isScrollContainer="true"
    android:background="@color/gray"
    android:layout_margin="10dp"
    >

    <LinearLayout
        android:id="@+id/editTextgroup_line_voltage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_marginVertical="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1.5"
            android:layout_margin="5dp"
            >
            <TextView
                android:id="@+id/txt_line_voltage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LineVoltage"
                android:background="@color/cardview_shadow_start_color"
                android:gravity="center"
                android:textSize="36sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            >

            <TextView
                android:id="@+id/txt_TR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TR"
                android:background="@color/red"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                >

            </TextView>
            <EditText
                android:id="@+id/input_TR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:hint="@string/v_380"
                android:inputType="number"
                android:maxLength="4"
                android:imeOptions="actionNext"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            >

            <TextView
                android:id="@+id/txt_ST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ST"
                android:background="@color/yellow"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                >

            </TextView>
            <EditText
                android:id="@+id/input_ST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:hint="@string/v_380"
                android:inputType="number"
                android:maxLength="4"
                android:imeOptions="actionNext"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            >

            <TextView
                android:id="@+id/txt_RS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RS"
                android:background="@color/blue"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                >

            </TextView>
            <EditText
                android:id="@+id/input_RS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:hint="@string/v_380"
                android:inputType="number"
                android:maxLength="4"
                android:imeOptions="actionNext"
                />
        </LinearLayout>



    </LinearLayout>



</merge>