<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_info"
    android:orientation="vertical"
    android:background="@color/gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_200"
        />

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >




     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1"
         >

         <TextView
             android:id="@+id/txt_post_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/post_code"
             android:textAlignment="center"
             android:textSize="28sp"
             android:textStyle="bold"
             />

         <EditText
             android:id="@+id/input_post_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:textAlignment="center"
             android:inputType="number"
             android:maxLength="5"
             android:textStyle="bold"
             android:textSize="30sp"
             android:imeOptions="actionNext"

             />

     </LinearLayout>

     <View
         android:layout_width="3dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@color/purple_200"
         />

     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1">

         <TextView
             android:id="@+id/txt_post_capacity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/post_capacity"
             android:textAlignment="center"
             android:textSize="28sp"
             android:textStyle="bold"
             />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">

             <EditText
                 android:id="@+id/input_post_capacity"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:layout_marginTop="5dp"
                 android:textAlignment="center"
                 android:inputType="number"
                 android:maxLength="5"
                 android:textStyle="bold"
                 android:textSize="30sp"
                 android:imeOptions="actionNext"

                 />

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="24sp"
                 android:text="@string/kva"
                 />

         </LinearLayout>

     </LinearLayout>


 </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_200"
        />

    <ScrollView
        android:id="@+id/layout_scroolView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



<LinearLayout
    android:id="@+id/reg_Load_div"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="invisible">


    <TextView
        android:id="@+id/txt_post_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_load"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="5dp"
        >

        <TextView
            android:id="@+id/txt_R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r"
            android:background="@color/red"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            >

        </TextView>
        <EditText
            android:id="@+id/input_R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:hint="@string/r"
            android:inputType="number"
            android:maxLength="4"
            android:imeOptions="actionNext"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="5dp"
        >

        <TextView
            android:id="@+id/txt_S"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:background="@color/yellow"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            >

        </TextView>
        <EditText
            android:id="@+id/input_S"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:hint="@string/s"
            android:inputType="number"
            android:maxLength="4"
            android:imeOptions="actionNext"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="5dp"
        >

        <TextView
            android:id="@+id/txt_T"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t"
            android:background="@color/blue"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            >

        </TextView>
        <EditText
            android:id="@+id/input_T"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:hint="@string/t"
            android:inputType="number"
            android:maxLength="4"
            android:imeOptions="actionNext"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="5dp"
        >

        <TextView
            android:id="@+id/txt_N"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n"
            android:background="@color/gray"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            >

        </TextView>
        <EditText
            android:id="@+id/input_N"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:hint="@string/n"
            android:inputType="number"
            android:maxLength="4"
            android:imeOptions="actionNext"
            />
    </LinearLayout>




</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:imeOptions="actionNext"
    >

    <include layout="@layout/layout_line_voltage"
        android:id="@+id/line_voltage"
        android:visibility="visible"
        android:imeOptions="actionNext"
        />

    <include layout="@layout/layout_phase_voltage"
        android:id="@+id/phase_voltage"
        android:visibility="visible"
        android:imeOptions="actionNext"
        />
</LinearLayout>








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:imeOptions="actionNext"
        >


        <Button
            android:id="@+id/btn_reg_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/reg_load"
            android:layout_weight="3"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:onClick="reg_OnClick"
            android:backgroundTint="@color/teal_700"
            android:inputType="none"
            android:imeOptions="actionNext"
            />



    </LinearLayout>







</LinearLayout>
    </ScrollView>

</LinearLayout>
